Issue #133 - provide short description
include ellipses if truncated

--- a/ui/app/styles/main.less
+++ b/ui/app/styles/main.less
@@ -58,6 +58,8 @@ a {
 .detail {
   margin-bottom: 2em;
 
+  .shortdesc { margin: -0.5em 0 0.875em; font-style: italic; }
+
   .desc textarea {
     width: 100%;
   }
